# ai-native-app

./: .gitignore  CLAUDE.md  DEPLOYMENT.md
.claude/: settings.local.json
claude-agent-service/: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  FINAL_DEPLOYMENT.md  FRONTEND_SETUP.md  Makefile  PROJECT_COMPLETE.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  UPDATE_GUIDE.md  add_tool_calls_column.sql  docker-compose.yml  fix-database.sh  pyproject.toml  start-all.sh  start-dev.sh  update-database.sh
claude-agent-service/backend/: .env.example  Dockerfile.backend  alembic.ini  requirements.txt
claude-agent-service/backend/alembic/: env.py
claude-agent-service/backend/alembic/versions/: 20241024_add_claude_session_id.py  20241027_add_tool_calls_to_conversation.py
claude-agent-service/backend/app/: __init__.py  main.py
claude-agent-service/backend/app/api/: chat.py  files.py  sessions.py
claude-agent-service/backend/app/core/: config.py  database.py  redis.py
claude-agent-service/backend/app/models/: conversation.py  session.py
claude-agent-service/docs/: DATABASE_MIGRATION.md  FRONTEND_INTEGRATION.md  SDK_CAPABILITIES.md  SESSION_ID_MAPPING.md  STREAMING_API.md  TOOL_CALLING_EVENTS.md
claude-agent-service/examples/: client_example.py  streaming_client.py
claude-agent-service/frontend/: .env.example  CHECKLIST.md  Dockerfile  IMPLEMENTATION.md  PROJECT_SUMMARY.md  README.md  entrypoint.sh  next.config.js  package-lock.json  package.json  start.sh  tailwind.config.js
claude-agent-service/frontend/public/: config.js
(+189 files in other folders)
