[project]
name = "claude-agent-service"
version = "0.1.0"
description = "Claude Agent Service with session management"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "aiofiles>=24.1.0",
    "claude-agent-sdk>=0.1.4"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
